Default State
The main two classes, UI and Game, and its initial task of running the game. I created this branch to perform updates and redesign the program without impacting the code used for my previous work.