@@ -5,8 +5,8 @@
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>com.boomspring</groupId>
-  <artifactId>ai</artifactId>
-  <version>1.0</version>
+  <artifactId>chess</artifactId>
+  <version>4.0</version>
 
   <name>Chess</name>
 
@@ -18,16 +18,30 @@
     </dependency>
   </dependencies>
 
+  <properties>
+    <maven.compiler.source>12</maven.compiler.source>
+    <maven.compiler.target>12</maven.compiler.target>
+    <maven.test.skip>true</maven.test.skip>
+  </properties>
+
   <build>
     <plugins>
+      <plugin>
+        <artifactId>maven-jar-plugin</artifactId>
+        <version>3.0.2</version>
+        <executions>
+          <execution>
+            <id>default-jar</id>
+            <phase>none</phase>
+          </execution>
+        </executions>
+      </plugin>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
         <version>3.8.0</version>
         <configuration>
-          <source>1.8</source>
-          <target>1.8</target>
-          <compilerArgs></compilerArgs>
+          <compilerArgs>--enable-preview</compilerArgs>
         </configuration>
       </plugin>
       <plugin>
@@ -43,7 +57,7 @@
             <configuration>
               <archive>
                 <manifest>
-                  <mainClass>com.boomspring.chess.Game</mainClass>
+                  <mainClass>com.boomspring.chess.UI</mainClass>
                 </manifest>
               </archive>
               <descriptorRefs>
